# GoogleCodeJam

./: .gitignore  GoogleCodeJam.sln
2013/QualificationRound/D_Treasure/: D_Treasure.cpp  D_Treasure.vcxproj  D_Treasure.vcxproj.filters  stdafx.cpp
2013/QualificationRound/UnitTest1/: UnitTest1.vcxproj  UnitTest1.vcxproj.filters  unittest1.cpp
2016/QualificationRound/Fractiles/: Fractiles.vcxproj  main.cpp
2016/Round1A/BFFs/: BFFs.vcxproj  main.cpp
2016/Round1A/RankAndFile/: B-small-attempt0.in  B-small-attempt0.out  RankAndFile.vcxproj  main.cpp
2016/Round1A/TheLastWord/: A-small-attempt0.in  A-small-attempt0.out  TheLastWord.vcxproj  main.cpp
2016/Round1C/Slides/: example.out  (+3 more)
CoinJam/: CoinJam.vcxproj  main.cpp
CoinJamCSharp/: CoinJamCSharp.csproj  Program.cs
CoinJamCSharp/Properties/: AssemblyInfo.cs
CountingSheep/: CountingSheep.vcxproj  main.cpp
Revenge of the Pancakes/: B-small-attempt0.in  B-small-attempt0.out  Revenge of the Pancakes.vcxproj  main.cpp
ReverseWords/: ReverseWords.vcxproj  ReverseWords.vcxproj.filters  main.cpp
StoreCredit/: ReadMe.txt  StoreCredit.cpp  StoreCredit.vcxproj  StoreCredit.vcxproj.filters  stdafx.cpp
ipch/D_TREASURE-8001969e/: D_TREASURE-a9be685a.ipch
workspace/: A-large.in  A-small-attempt0.expected  A-small-attempt0.in  B-large-practice.expected  B-small-practice.expected  C-small-practice-2.expected  CMakeLists.txt  main.cpp  main.py  sample.expected  sample.in  test.cpp  test.py
workspace/features/: jam.feature  python.feature
workspace/features/step_definitions/: steps.rb
workspace/steps/: step.py
(+7 files in other folders)
